fix: radial menu function close + z-index hud + site icons

--- a/src/components/hud/css/hud.css
+++ b/src/components/hud/css/hud.css
@@ -33,6 +33,7 @@
 }
 
 .radialmenu__container {
+    z-index: 111;
     display: flex;
     width: 100%;
     height: 100%;
